# SC25-VGC

./: 0-compile-vgc.py  1-download-datasets.py  2-main-compression-ratio.py  2-main-throughput-double.py  2-main-throughput-single.py  3-optional-me-throughput.py  3-optional-sd-compilation.py  3-optional-sd-throughput.py  README.md
vgc/vgc-compression/examples/: CMakeLists.txt  cuSZp.cpp  cuSZp_2D_double_outlier.cpp  cuSZp_2D_double_plain.cpp  cuSZp_2D_float_outlier.cpp  cuSZp_2D_float_plain.cpp  cuSZp_3D_double_outlier.cpp  cuSZp_3D_double_plain.cpp  cuSZp_3D_float.cpp  cuSZp_3D_float_outlier.cpp  cuSZp_3D_float_plain.cpp  cuSZp_test_f32.cpp
vgc/vgc-compression/include/cuSZp/: cuSZp_kernels_2D_f32.h  cuSZp_kernels_3D_f32.h
vgc/vgc-compression/src/: cuSZp_entry_2D_f32.cu  cuSZp_entry_2D_f64.cu  cuSZp_entry_3D_f32.cu  cuSZp_entry_3D_f64.cu  cuSZp_kernels_1D_f32.cu  cuSZp_kernels_2D_f32.cu  cuSZp_kernels_2D_f64.cu  cuSZp_kernels_3D_f32.cu  cuSZp_kernels_3D_f64.cu
vgc/vgc-versatility/memory-efficient/: CMakeLists.txt
vgc/vgc-versatility/memory-efficient/examples/: CMakeLists.txt  memory-efficient-plain_f32.cpp  memory-efficient-plain_f64.cpp
vgc/vgc-versatility/memory-efficient/include/cuSZp/: cuSZp_entry_f32.h  cuSZp_entry_f64.h  cuSZp_kernels_f32.h  cuSZp_kernels_f64.h
vgc/vgc-versatility/memory-efficient/src/: cuSZp.cu  cuSZp_entry_f32.cu  cuSZp_entry_f64.cu  cuSZp_kernels_f32.cu  cuSZp_kernels_f64.cu
vgc/vgc-versatility/random-access/: CMakeLists.txt
vgc/vgc-versatility/random-access/examples/: CMakeLists.txt  cuSZp.cpp  cuSZp_2D_double.cpp  cuSZp_3D_double.cpp
vgc/vgc-versatility/random-access/include/: cuSZp.h
vgc/vgc-versatility/random-access/include/cuSZp/: cuSZp_kernels_1D_f32.h  cuSZp_kernels_2D_f32.h  cuSZp_kernels_3D_f32.h  cuSZp_kernels_3D_f64.h
vgc/vgc-versatility/random-access/src/: cuSZp_entry_1D_f32.cu  cuSZp_entry_2D_f32.cu  cuSZp_entry_3D_f32.cu  cuSZp_entry_3D_f64.cu  cuSZp_kernels_1D_f32.cu  cuSZp_kernels_1D_f64.cu  cuSZp_kernels_2D_f32.cu  cuSZp_kernels_3D_f32.cu  cuSZp_kernels_3D_f64.cu
